aligning comments; badge fixing

--- a/rspp/app/assets/stylesheets/main_page.scss
+++ b/rspp/app/assets/stylesheets/main_page.scss
@@ -34,15 +34,16 @@ body {
     margin-top: 7px;
 
     p {
-        font-size: 1.6rem;
         margin: 1.5px;
     }
 
     &-name {
+        font-size: 3.6rem;
         font-weight: bold;
     }
 
     &-credits {
+        font-size: 2.1rem;
         padding-bottom: 3px;
 
         .email {
@@ -167,7 +168,7 @@ body {
         padding: 6px;
         outline: 0;
         font-family: inherit;
-        font-size: 0.95em;
+        font-size: 2rem;
     }
 
     input[type="email"],
@@ -477,7 +478,6 @@ $news-post-height: 200px;
             margin-top: 5px;
             color: darken($main-color-second, 5%);
         }
-
     }
 }
 
@@ -508,12 +508,13 @@ $news-post-height: 200px;
     padding: 0 15px;
     border: 5px solid #DDDDDD;
     min-height: 260px;
-    height: 295px; 
+    height: 295px;
 }
 
 .socials {
     @extend .boxstyle;
     float: right;
+
     h2 {
         font-weight: bold;
         text-align: center;
@@ -574,9 +575,11 @@ $news-post-height: 200px;
 
         .value {
             border-left: 1px solid #DDDDDD;
+
             &.value-down {
                 background: rgba(77, 183, 72, 0.2);
             }
+
             &.value-up {
                 background: rgba(237, 27, 36, 0.2);
             }
@@ -604,7 +607,6 @@ $news-post-height: 200px;
 
 #map {
     @extend .boxstyle;
-
     width: 380px;
     padding: 0;
     margin-right: 40px;
@@ -674,38 +676,40 @@ $news-post-height: 200px;
                 }
 
                 .comment-body {
-                  margin-left: 50px;
-                  font-size: 17px;
+                    margin-left: 50px;
+                    font-size: 17px;
                 }
             }
         }
-
     }
 }
 
 .join-badge {
-    width: 140px;
-    height: 140px;
-    box-shadow: 0 0 10px 0 #000000;
-    border-radius: 50%;
+    width: 260px;
+    height: 60px;
+    box-shadow: 0 0 5px 0 #000000;
+    // border-radius: 50%;
     display: inline-block;
-    top: 50%;
+    top: 42%;
     transform: translateY(-50%);
     position: absolute;
-    left: 57%;
-    background: $main-color-first;
+    right: .3%;
+    background: lighten(#E80536, 3%);
     color: #FFFFFF;
     cursor: pointer;
 
+    &:hover {
+        background: darken($main-color-first,5%);
+    }
+
     .text {
-        top: 50%;
-        transform: translateY(-50%);
-        position: relative;
+        display: inline-block;
+        line-height: 60px;
     }
 
     p {
         font-family: 'PT Sans', sans-serif;
-        font-size: 20px;
+        font-size: 2.5rem;
         font-weight: 700;
         text-shadow: 1px 2px 3px rgba(0, 0, 0, .6);
         text-transform: uppercase;
